resampler: Don't expose soxr methods if they are not supported

Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=92780